[package]
name = "fixed-map"
version = "0.8.0-alpha.2"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
categories = ["data-structures"]

description = """
A fixed map where storage layout is calculated by a procedural macro.
"""

documentation = "https://docs.rs/fixed-map"
homepage = "https://github.com/udoprog/fixed-map"
repository = "https://github.com/udoprog/fixed-map"

readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["map", "std"]
std = ["serde?/std"]
map = ["hashbrown", "std"]

[dependencies]
fixed-map-derive = { version = "0.8.0-alpha.2", path = "fixed-map-derive" }
hashbrown = { version = "0.12.3", optional = true }
serde = { version = "1.0.145", optional = true, default_features = false }

[dev-dependencies]
criterion = "0.4.0"
hashbrown = "0.12.3"

[[bench]]
name = "map_benches"
harness = false

[workspace]
members = ["fixed-map-derive"]
