[package]
name = "fixed-map"
version = "0.8.3"
authors = ["John-John Tedro <udoprog@tedro.se>", "Peter Jaszkowiak <p.jaszkow@gmail.com>"]
edition = "2021"
rust-version = "1.65"
description = "A fixed map where storage layout is calculated by a procedural macro."
documentation = "https://docs.rs/fixed-map"
readme = "README.md"
homepage = "https://github.com/udoprog/fixed-map"
repository = "https://github.com/udoprog/fixed-map"
license = "MIT/Apache-2.0"
keywords = ["container", "data-structure", "map", "no_std"]
categories = ["data-structures"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["hashbrown", "std"]
std = ["serde?/std"]

[dependencies]
fixed-map-derive = { version = "=0.8.3", path = "fixed-map-derive" }
hashbrown = { version = "0.13.2", optional = true }
serde = { version = "1.0.145", optional = true, default_features = false }

[dev-dependencies]
criterion = "0.4.0"
hashbrown = "0.13.2"

[[bench]]
name = "complex"
harness = false

[[bench]]
name = "simple"
harness = false

[workspace]
members = [
    "fixed-map-derive"
]
