[package]
name = "fixed-map-derive"
version = "0.8.3"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
rust-version = "1.65"
description = """
A fixed map where storage layout is calculated by a procedural macro.

This crate contains the procedural macros.
"""
documentation = "https://docs.rs/fixed-map"
readme = "README.md"
homepage = "https://github.com/udoprog/fixed-map"
repository = "https://github.com/udoprog/fixed-map"
license = "MIT/Apache-2.0"
keywords = ["container", "data-structure", "map", "no_std"]
categories = ["data-structures"]

[dependencies]
syn = { version = "1.0.8", features = ["full"] }
quote = "1.0.2"
proc-macro2 = "1.0.6"

[dev-dependencies]
fixed-map = { version = "=0.8.3", path = ".." }

[lib]
proc-macro = true
